FIX: Add new positioning in the tools section on tablet size

--- a/scss/_tools.scss
+++ b/scss/_tools.scss
@@ -101,48 +101,16 @@ body {
       }
       .icon {
         width: 16.66%;
+        .skill-icon {
+          svg {
+            transform: translate(-50%, -5%);
+          }
+        }
         p {
           text-align: center;
           padding: 0px;
-          margin-top: 90px;
           font-family: "Gothic A1", sans-serif;
           font-weight: 200;
-        }
-      }
-
-      .bootstrap {
-        p {
-          margin-top: 100px;
-        }
-      }
-
-      .git {
-        p {
-          margin-top: 105px;
-        }
-      }
-
-      .npm {
-        p {
-          margin-top: 95px;
-        }
-      }
-
-      .sass {
-        p {
-          margin-top: 112px;
-        }
-      }
-
-      .github {
-        p {
-          margin-top: 112px;
-        }
-      }
-
-      .figma {
-        p {
-          margin-top: 112px;
         }
       }
     }
